[gd_scene load_steps=10 format=4 uid="uid://d05mp0hd88gc0"]

[ext_resource type="Script" uid="uid://cn6o3cm544o47" path="res://Scripts/Minigames/Tetris/tetris_game.gd" id="1_5dmn3"]
[ext_resource type="Texture2D" uid="uid://jxevfpdpwx0r" path="res://Sprites/Tetris/tetrominoes.png" id="1_5qmqg"]
[ext_resource type="Script" uid="uid://cohj6v7gukfv0" path="res://Scripts/Minigames/Tetris/Board.gd" id="3_w2we6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yprpe"]
texture = ExtResource("1_5qmqg")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_321ql"]
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3bmkb"]
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_frf35"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_yprpe")
sources/1 = SubResource("TileSetAtlasSource_321ql")
sources/2 = SubResource("TileSetAtlasSource_3bmkb")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ybmw1"]
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0

[sub_resource type="TileSet" id="TileSet_321ql"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_ybmw1")

[node name="MainGame" type="Node2D"]
script = ExtResource("1_5dmn3")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -3.0
offset_top = 1.0
offset_right = 1152.0
offset_bottom = 649.0
color = Color(0, 0, 0, 1)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_frf35")
format = 2

[node name="Board" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAASABUAAAAHAAAAAAATABUAAAAHAAAAAAAUABUAAAAHAAAAAAARABUAAAAHAAAAAAAQABUAAAAHAAAAAAAVABUAAAAHAAAAAAAWABUAAAAHAAAAAAAXABUAAAAHAAAAAAAPABUAAAAHAAAAAAAYABUAAAAHAAAAAAAOABQAAAAHAAAAAAAZABQAAAAHAAAAAAAOABMAAAAHAAAAAAAOABIAAAAHAAAAAAAOABEAAAAHAAAAAAAOABAAAAAHAAAAAAAOAA8AAAAHAAAAAAAOAA4AAAAHAAAAAAAOAA0AAAAHAAAAAAAOAAwAAAAHAAAAAAAOAAsAAAAHAAAAAAAOAAoAAAAHAAAAAAAOAAkAAAAHAAAAAAAOAAgAAAAHAAAAAAAOAAcAAAAHAAAAAAAOAAYAAAAHAAAAAAAOAAUAAAAHAAAAAAAOAAQAAAAHAAAAAAAOAAMAAAAHAAAAAAAOAAIAAAAHAAAAAAAZAAIAAAAHAAAAAAAZAAMAAAAHAAAAAAAZAAQAAAAHAAAAAAAZAAUAAAAHAAAAAAAZAAYAAAAHAAAAAAAZAAcAAAAHAAAAAAAZAAgAAAAHAAAAAAAZAAkAAAAHAAAAAAAZAAoAAAAHAAAAAAAZAAsAAAAHAAAAAAAZAAwAAAAHAAAAAAAZAA0AAAAHAAAAAAAZAA4AAAAHAAAAAAAZAA8AAAAHAAAAAAAZABAAAAAHAAAAAAAZABEAAAAHAAAAAAAZABIAAAAHAAAAAAAZABMAAAAHAAAAAAAOABUAAAAHAAAAAAAZAAEAAAAHAAAAAAAOAAEAAAAHAAAAAAAZABUAAAAHAAAAAAAeAAEAAQAAAAAAAAAdAAEAAQABAAAAAAAcAAEAAQACAAAAAAAbAAEAAQADAAAAAAAJAAEAAQAHAAAAAAAKAAEAAQAGAAAAAAALAAEAAQAFAAAAAAAMAAEAAQAEAAAAAAAOAAAAAgAAAAAAAAAZAAAAAgAAAAAAAAA=")
tile_set = SubResource("TileSet_frf35")
script = ExtResource("3_w2we6")

[node name="ShadowBoard" type="TileMapLayer" parent="TileMap"]
modulate = Color(1, 1, 1, 0.490196)
tile_set = SubResource("TileSet_321ql")

[node name="HeldPiece" type="Node" parent="TileMap"]

[node name="TimerManager" type="Node" parent="."]

[node name="BlitzTimer" type="Timer" parent="TimerManager"]
wait_time = 120.0

[node name="40LTimer" type="Timer" parent="TimerManager"]
autostart = true

[node name="ComboTimer" type="Timer" parent="TimerManager"]
wait_time = 1.6

[node name="LabelManager" type="Node" parent="."]

[node name="timeLeftText" type="Label" parent="LabelManager"]
visible = false
offset_left = 176.0
offset_top = 176.0
offset_right = 317.0
offset_bottom = 220.0
theme_override_font_sizes/font_size = 31
text = "Time left:"

[node name="timeLeft" type="Label" parent="LabelManager"]
visible = false
offset_left = 328.0
offset_top = 176.0
offset_right = 469.0
offset_bottom = 220.0
theme_override_font_sizes/font_size = 31
text = "120"

[node name="40LTime" type="Label" parent="LabelManager"]
visible = false
offset_left = 304.0
offset_top = 240.0
offset_right = 445.0
offset_bottom = 284.0
theme_override_font_sizes/font_size = 31
text = "00:00"

[node name="Score" type="Label" parent="LabelManager"]
visible = false
offset_left = 367.0
offset_top = 316.0
offset_right = 508.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 31
text = "0"

[node name="Score2" type="Label" parent="LabelManager"]
visible = false
offset_left = 269.0
offset_top = 314.0
offset_right = 410.0
offset_bottom = 358.0
theme_override_font_sizes/font_size = 31
text = "Score: "

[node name="ClearedLines" type="Label" parent="LabelManager"]
visible = false
offset_left = 139.0
offset_top = 384.0
offset_right = 344.0
offset_bottom = 428.0
theme_override_font_sizes/font_size = 31
text = "Lines cleared:"

[node name="ClearedLinesText" type="Label" parent="LabelManager"]
visible = false
offset_left = 355.0
offset_top = 384.0
offset_right = 496.0
offset_bottom = 428.0
theme_override_font_sizes/font_size = 31
text = "0"

[node name="Combo" type="Label" parent="LabelManager"]
offset_left = 233.0
offset_top = 541.0
offset_right = 438.0
offset_bottom = 585.0
theme_override_font_sizes/font_size = 31
text = "Combo:"

[node name="ComboText" type="Label" parent="LabelManager"]
offset_left = 352.0
offset_top = 544.0
offset_right = 493.0
offset_bottom = 588.0
theme_override_font_sizes/font_size = 31
text = "1"

[node name="PPS" type="Label" parent="LabelManager"]
offset_left = 283.0
offset_top = 605.0
offset_right = 488.0
offset_bottom = 649.0
theme_override_font_sizes/font_size = 31
text = "PPS:"

[node name="PPSText" type="Label" parent="LabelManager"]
offset_left = 351.0
offset_top = 606.0
offset_right = 492.0
offset_bottom = 650.0
theme_override_font_sizes/font_size = 31
text = "1"

[node name="dropPiece" type="AudioStreamPlayer2D" parent="."]

[node name="clearLine" type="AudioStreamPlayer2D" parent="."]

[node name="gameOver" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="TimerManager/BlitzTimer" to="." method="_on_blitz_timer_timeout"]
[connection signal="timeout" from="TimerManager/40LTimer" to="." method="_on_l_timer_timeout"]
[connection signal="timeout" from="TimerManager/ComboTimer" to="." method="_on_combo_timer_timeout"]
